force-app/main/default/objects/Template__c/Template__c.object-meta.xml
<CustomObject>
    <description>Template is composed of template pieces which are conditionally composed to instantiate the template (usually as a letter).</description>
    <label>Template</label>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Templates</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>