force-app/main/default/objects/Template__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If template is active, it may be invoked (usually from letters).</description>
    <inlineHelpText>If template is active, it may be invoked (usually from letters).</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>