force-app/main/default/objects/Template__c/fields/Allowed_statuses__c.field-meta.xml
<CustomField>
    <fullName>Allowed_statuses__c</fullName>
    <description>If non-blank, then use of this template is restricted to letters whose linked proposals have one of the given statuses.  The value (if any) should be a comma-separated list of numeric statuses.</description>
    <inlineHelpText>If non-blank, then use of this template is restricted to letters whose linked proposals have one of the given statuses.  The value (if any) should be a comma-separated list of numeric statuses.</inlineHelpText>
    <label>Allowed statuses</label>
    <type>TextArea</type>
</CustomField>