force-app/main/default/objects/Template__c/fields/Date_sent_recd_field_name__c.field-meta.xml
<CustomField>
    <fullName>Date_sent_recd_field_name__c</fullName>
    <description>If a date field in another record should be set when this letter is sent or received, then enter the field name here (for example, Date_declined__c or Date_closed__c).</description>
    <inlineHelpText>If a date field in another record should be set when this letter is sent or received, then enter the field name here (for example, Date_declined__c or Date_closed__c).</inlineHelpText>
    <label>Date sent/recd field name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>