force-app/main/default/objects/Template__c/fields/Date_sent_recd_object_name__c.field-meta.xml
<CustomField>
    <fullName>Date_sent_recd_object_name__c</fullName>
    <description>If a date field in another record should be set when this letter is sent or received, then enter that record&apos;s object name here (for example, Proposal__c or Payment_Method__c).</description>
    <inlineHelpText>If a date field in another record should be set when this letter is sent or received, then enter that record&apos;s object name here (for example, Proposal__c or Payment_Method__c).</inlineHelpText>
    <label>Date sent/recd object name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>