force-app/main/default/objects/Template__c/fields/Form_for_posted_letter__c.field-meta.xml
<CustomField>
    <fullName>Form_for_posted_letter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to a form from which to build a form instance when a letter with this template is posted</description>
    <inlineHelpText>Link to a form from which to build a form instance when a letter with this template is posted</inlineHelpText>
    <label>Form for posted letter</label>
    <referenceTo>Form__c</referenceTo>
    <relationshipLabel>Templates</relationshipLabel>
    <relationshipName>Templates</relationshipName>
    <type>Lookup</type>
</CustomField>