force-app/main/default/objects/Template__c/fields/Form_Phrase_Title__c.field-meta.xml
<CustomField>
    <fullName>Form_Phrase_Title__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The (translatable) title phrase for this template</description>
    <inlineHelpText>The (translatable) title phrase for this template</inlineHelpText>
    <label>Form Phrase Title</label>
    <referenceTo>Form_Phrase__c</referenceTo>
    <relationshipLabel>Templates</relationshipLabel>
    <relationshipName>Templates</relationshipName>
    <type>Lookup</type>
</CustomField>