force-app/main/default/objects/Template__c/fields/Postable__c.field-meta.xml
<CustomField>
    <fullName>Postable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if letters having this template will be posted directly to the online apps web site and a separate notification email will be emailed to the group</description>
    <inlineHelpText>Checked if letters having this template will be posted directly to the online apps web site and a separate notification email will be emailed to the group</inlineHelpText>
    <label>Postable</label>
    <type>Checkbox</type>
</CustomField>