force-app/main/default/objects/Template__c/fields/Signer_2_field_name__c.field-meta.xml
<CustomField>
    <fullName>Signer_2_field_name__c</fullName>
    <description>Name of field in source object used to retrieve contact info for letter&apos;s signer 2</description>
    <inlineHelpText>Name of field in source object used to retrieve contact info for letter&apos;s signer 2</inlineHelpText>
    <label>Signer 2 field name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>