force-app/main/default/objects/Template__c/fields/Source_object__c.field-meta.xml
<CustomField>
    <fullName>Source_object__c</fullName>
    <description>The name of the SalesForce object for this correspondence template.  Letters based on this template should be linked to records of this object. For example, the Final Report Reminder letter template should have Milestone__c as Source Object.</description>
    <inlineHelpText>The name of the SalesForce object for this correspondence template.  Letters based on this template should be linked to records of this object. For example, the Final Report Reminder letter template should have Milestone__c as Source Object.</inlineHelpText>
    <label>Source object</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>GM_Data__c</fullName>
            </value>
            <value>
                <fullName>Milestone__c</fullName>
            </value>
            <value>
                <fullName>Invite__c</fullName>
            </value>
            <value>
                <fullName>Payment__c</fullName>
            </value>
            <value>
                <fullName>Payment_Method__c</fullName>
            </value>
            <value>
                <fullName>Profile__c</fullName>
            </value>
            <value>
                <fullName>Proposal__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>