force-app/main/default/objects/Template__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>The type of this template (for example, Development, Grantmaking, etc.)</description>
    <inlineHelpText>The type of this template (for example, Development, Grantmaking, etc.)</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Grantmaking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>