force-app/main/default/objects/Template__c/validationRules/NonAdminEditingNonAccountTemplate.validationRule-meta.xml
<ValidationRule>
    <fullName>NonAdminEditingNonAccountTemplate</fullName>
    <active>false</active>
    <description>Only admin users are permitted to edit/create/delete a template, unless it belongs to the Account object.</description>
    <errorConditionFormula>AND(
 TEXT(Type__c) = &quot;Grantmaking&quot;,
 TEXT(Source_object__c) != &quot;Account&quot;,
 !CONTAINS(LOWER($Profile.Name), &quot;admin&quot;)
)</errorConditionFormula>
    <errorMessage>Only admin users are permitted to edit/create/delete a template, unless it belongs to the Account object.</errorMessage>
</ValidationRule>