force-app/main/default/objects/Template__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Source_object__c</columns>
    <columns>Allowed_statuses__c</columns>
    <columns>Date_sent_recd_object_name__c</columns>
    <columns>Date_sent_recd_field_name__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>